--- a/WebProject/package.json
+++ b/WebProject/package.json
@@ -23,6 +23,7 @@
     "js-cookie": "^2.1.3",
     "rasterizehtml": "^1.2.4",
     "vue": "^2.2.6",
+    "vue-bus": "^1.0.0",
     "vue-i18n": "^5.0.3",
     "vue-router": "^2.3.1",
     "vuex": "^2.2.1"
