增加带图标的树 引入jsx语法支持

--- a/WebProject/.babelrc
+++ b/WebProject/.babelrc
@@ -1,8 +1,8 @@
 {
   "presets": [
-    ["es2015", {
-      "modules": false
-    }]
+    "env"
+  ],
+  "plugins": [
+    "transform-vue-jsx"
   ]
 }
-
