--- a/WebProject/package.json
+++ b/WebProject/package.json
@@ -32,15 +32,22 @@
     "autoprefixer-loader": "^2.0.0",
     "babel": "^6.23.0",
     "babel-core": "^6.23.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.2",
     "babel-loader": "^6.2.4",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-preset-env": "^1.6.1",
     "babel-runtime": "^6.11.6",
     "css-loader": "^0.23.1",
+    "eslint": "^3.12.2",
+    "eslint-plugin-html": "^1.7.0",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.8.5",
     "html-loader": "^0.3.0",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^3.10.1",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.3.3",
@@ -50,10 +57,6 @@
     "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
-    "webpack-merge": "^3.0.0",
-    "node-sass": "^3.10.1",
-    "sass-loader": "^4.0.2",
-    "eslint": "^3.12.2",
-    "eslint-plugin-html": "^1.7.0"
+    "webpack-merge": "^3.0.0"
   }
 }
