--- a/WebProject/package.json
+++ b/WebProject/package.json
@@ -17,11 +17,12 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.15.3",
-    "echarts": "^3.4.0",
+    "echarts": "^3.8.5",
     "element-ui": "^2.0.2",
     "html2canvas": "^0.5.0-beta4",
     "js-cookie": "^2.1.3",
     "rasterizehtml": "^1.2.4",
+    "v-charts": "^1.17.8",
     "vue": "^2.2.6",
     "vue-bus": "^1.0.0",
     "vue-i18n": "^5.0.3",
