更新vue-cli到3.0，更新打包方式

--- a/WebProject/.gitignore
+++ b/WebProject/.gitignore
@@ -1,10 +1,21 @@
-.idea
-.idea/
 .DS_Store
-node_modules/
-.project
-dist
-dist/*
-src/config/*.tmp
-src/config/env.js
-npm-debug.log
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
