--- a/WebProject/package.json
+++ b/WebProject/package.json
@@ -1,63 +1,52 @@
 {
-  "name": "ElementVueSpringbootCodeTemplate",
-  "version": "1.0.0",
-  "description": "Element例子",
-  "main": "index.js",
+  "name": "xiaofengqing-vue-template",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "init": "webpack --progress --config webpack.dev.config.js",
-    "dev": "webpack-dev-server --content-base ./ --port 9090 --open --inline --hot --compress --history-api-fallback --config webpack.dev.config.js",
-    "build": "webpack --progress --hide-modules --config webpack.prod.config.js",
-    "lint": "eslint --fix --ext .js,.vue src"
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "dev": "vue-cli-service serve"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/xwjie/ElementVueSpringbootCodeTemplate"
-  },
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "axios": "^0.15.3",
-    "echarts": "^3.8.5",
-    "element-ui": "^2.0.2",
-    "html2canvas": "^0.5.0-beta4",
-    "js-cookie": "^2.1.3",
-    "rasterizehtml": "^1.2.4",
-    "v-charts": "^1.17.8",
-    "vue": "^2.2.6",
-    "vue-bus": "^1.0.0",
-    "vue-i18n": "^5.0.3",
-    "vue-router": "^2.3.1",
-    "vuex": "^2.2.1"
+    "axios": "^0.18.0",
+    "echarts": "^4.1.0",
+    "element-ui": "^2.4.6",
+    "v-charts": "^1.17.10",
+    "vue": "^2.5.17",
+    "vue-bus": "^1.1.0",
+    "vue-i18n": "^8.0.0",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^2.0.0",
-    "babel": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-runtime": "^6.11.6",
-    "css-loader": "^0.23.1",
-    "eslint": "^3.12.2",
-    "eslint-plugin-html": "^1.7.0",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.8.5",
-    "html-loader": "^0.3.0",
-    "html-webpack-plugin": "^2.28.0",
-    "node-sass": "^3.10.1",
-    "sass-loader": "^4.0.2",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "vue-hot-reload-api": "^1.3.3",
-    "vue-html-loader": "^1.2.3",
-    "vue-loader": "^11.0.0",
-    "vue-style-loader": "^1.0.0",
-    "vue-template-compiler": "^2.2.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1",
-    "webpack-merge": "^3.0.0"
-  }
+    "@vue/cli-plugin-babel": "^3.0.1",
+    "@vue/cli-plugin-eslint": "^3.0.1",
+    "@vue/cli-service": "^3.0.1",
+    "vue-cli-plugin-element": "^1.0.0",
+    "vue-template-compiler": "^2.5.17"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
